--- a/apps/lang/espanol.lang
+++ b/apps/lang/espanol.lang
@@ -9317,19 +9317,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK
-  desc: in settings_menu
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack"
   </source>
   <dest>
     *: none
-    usbstack: "Pila USB"
   </dest>
   <voice>
     *: none
-    usbstack: "Pila U S B"
   </voice>
 </phrase>
 <phrase>
@@ -9869,19 +9866,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_HOST
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Host"
   </source>
   <dest>
     *: none
-    usbstack: "Host"
   </dest>
   <voice>
     *: none
-    usbstack: "jost"
   </voice>
 </phrase>
 <phrase>
@@ -10188,19 +10182,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_MODE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack Mode"
   </source>
   <dest>
     *: none
-    usbstack: "Modo de pila USB"
   </dest>
   <voice>
     *: none
-    usbstack: "Modo de pila U S B"
   </voice>
 </phrase>
 <phrase>
@@ -10252,19 +10243,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device"
   </source>
   <dest>
     *: none
-    usbstack: "Dispositivo"
   </dest>
   <voice>
     *: none
-    usbstack: "Dispositivo"
   </voice>
 </phrase>
 <phrase>
@@ -10577,19 +10565,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE_DRIVER
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device Driver"
   </source>
   <dest>
     *: none
-    usbstack: "Controlador de dispositivo"
   </dest>
   <voice>
     *: none
-    usbstack: "Controlador de dispositivo"
   </voice>
 </phrase>
 <phrase>
