--- a/apps/lang/islenska.lang
+++ b/apps/lang/islenska.lang
@@ -1055,16 +1055,16 @@
 </phrase>
 <phrase>
   id: LANG_USB
-  desc: in the main menu
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "USB (Sim)"
+    *: none
   </source>
   <dest>
-    *: "USB (Sim)"
+    *: none
   </dest>
   <voice>
-    *: ""
+    *: none
   </voice>
 </phrase>
 <phrase>
