--- a/apps/lang/norsk-nynorsk.lang
+++ b/apps/lang/norsk-nynorsk.lang
@@ -9900,19 +9900,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK
-  desc: in settings_menu
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack"
   </source>
   <dest>
     *: none
-    usbstack: "USB-stakk"
   </dest>
   <voice>
     *: none
-    usbstack: "USB-stakk"
   </voice>
 </phrase>
 <phrase>
@@ -10164,19 +10161,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_HOST
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Host"
   </source>
   <dest>
     *: none
-    usbstack: "Vert"
   </dest>
   <voice>
     *: none
-    usbstack: "Vert"
   </voice>
 </phrase>
 <phrase>
@@ -10390,19 +10384,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_MODE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack Mode"
   </source>
   <dest>
     *: none
-    usbstack: "USB-stakkmodus"
   </dest>
   <voice>
     *: none
-    usbstack: "USB-stakkmodus"
   </voice>
 </phrase>
 <phrase>
@@ -10455,19 +10446,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device"
   </source>
   <dest>
     *: none
-    usbstack: "Eining"
   </dest>
   <voice>
     *: none
-    usbstack: "Eining"
   </voice>
 </phrase>
 <phrase>
@@ -10630,19 +10618,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE_DRIVER
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device Driver"
   </source>
   <dest>
     *: none
-    usbstack: "Einingsdrivar"
   </dest>
   <voice>
     *: none
-    usbstack: "Einingsdrivar"
   </voice>
 </phrase>
 <phrase>
