--- a/apps/lang/norsk.lang
+++ b/apps/lang/norsk.lang
@@ -10083,19 +10083,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK
-  desc: in settings_menu
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack"
   </source>
   <dest>
     *: none
-    usbstack: "USB-stakk"
   </dest>
   <voice>
     *: none
-    usbstack: "USB-stakk"
   </voice>
 </phrase>
 <phrase>
@@ -10441,19 +10438,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_HOST
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Host"
   </source>
   <dest>
     *: none
-    usbstack: "Vert"
   </dest>
   <voice>
     *: none
-    usbstack: "Vert"
   </voice>
 </phrase>
 <phrase>
@@ -10704,19 +10698,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_MODE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack Mode"
   </source>
   <dest>
     *: none
-    usbstack: "USB-stakk-modus"
   </dest>
   <voice>
     *: none
-    usbstack: "USB-stakk-modus"
   </voice>
 </phrase>
 <phrase>
@@ -10769,19 +10760,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device"
   </source>
   <dest>
     *: none
-    usbstack: "Enhet"
   </dest>
   <voice>
     *: none
-    usbstack: "Enhet"
   </voice>
 </phrase>
 <phrase>
@@ -10975,19 +10963,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE_DRIVER
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device Driver"
   </source>
   <dest>
     *: none
-    usbstack: "Enhetsdriver"
   </dest>
   <voice>
     *: none
-    usbstack: "Enhetsdriver"
   </voice>
 </phrase>
 <phrase>
