--- a/apps/lang/russian.lang
+++ b/apps/lang/russian.lang
@@ -8030,19 +8030,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK
-  desc: in settings_menu
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack"
   </source>
   <dest>
     *: none
-    usbstack: "Стек USB"
   </dest>
   <voice>
     *: none
-    usbstack: "Стек USB"
   </voice>
 </phrase>
 <phrase>
@@ -8863,19 +8860,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_HOST
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Host"
   </source>
   <dest>
     *: none
-    usbstack: "Хост"
   </dest>
   <voice>
     *: none
-    usbstack: "Хост"
   </voice>
 </phrase>
 <phrase>
@@ -9278,19 +9272,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_MODE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack Mode"
   </source>
   <dest>
     *: none
-    usbstack: "Режим стека USB"
   </dest>
   <voice>
     *: none
-    usbstack: "Режим стека USB"
   </voice>
 </phrase>
 <phrase>
@@ -9359,19 +9350,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device"
   </source>
   <dest>
     *: none
-    usbstack: "Устройство"
   </dest>
   <voice>
     *: none
-    usbstack: "Устройство"
   </voice>
 </phrase>
 <phrase>
@@ -9901,19 +9889,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE_DRIVER
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device Driver"
   </source>
   <dest>
     *: none
-    usbstack: "Драйвер устройства"
   </dest>
   <voice>
     *: none
-    usbstack: "Драйвер устройства"
   </voice>
 </phrase>
 <phrase>
