--- a/apps/lang/afrikaans.lang
+++ b/apps/lang/afrikaans.lang
@@ -522,16 +522,16 @@
 </phrase>
 <phrase>
   id: LANG_USB
-  desc: in the main menu
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "USB (sim)"
+    *: none
   </source>
   <dest>
-    *: "USB"
+    *: none
   </dest>
   <voice>
-    *: ""
+    *: none
   </voice>
 </phrase>
 <phrase>
