--- a/apps/lang/hebrew.lang
+++ b/apps/lang/hebrew.lang
@@ -11144,87 +11144,72 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK
-  desc: in settings_menu
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack"
   </source>
   <dest>
     *: none
-    usbstack: "מחסנית USB"
   </dest>
   <voice>
     *: none
-    usbstack: "USB Stack"
   </voice>
 </phrase>
 <phrase>
   id: LANG_USBSTACK_MODE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack Mode"
   </source>
   <dest>
     *: none
-    usbstack: "מצב מחסנית USB"
   </dest>
   <voice>
     *: none
-    usbstack: "USB Stack Mode"
   </voice>
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device"
   </source>
   <dest>
     *: none
-    usbstack: "Device"
   </dest>
   <voice>
     *: none
-    usbstack: "Device"
   </voice>
 </phrase>
 <phrase>
   id: LANG_USBSTACK_HOST
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Host"
   </source>
   <dest>
     *: none
-    usbstack: "Host"
   </dest>
   <voice>
     *: none
-    usbstack: "Host"
   </voice>
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE_DRIVER
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device Driver"
   </source>
   <dest>
     *: none
-    usbstack: "מנהל התקן"
   </dest>
   <voice>
     *: none
-    usbstack: "Device Driver"
   </voice>
 </phrase>
 <phrase>
