--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -6514,19 +6514,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK
-  desc: in settings_menu
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack"
   </source>
   <dest>
     *: none
-    usbstack: "USB Stack"
   </dest>
   <voice>
     *: none
-    usbstack: "USB Stack"
   </voice>
 </phrase>
 <phrase>
@@ -7704,19 +7701,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_HOST
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Host"
   </source>
   <dest>
     *: none
-    usbstack: "Ostiya"
   </dest>
   <voice>
     *: none
-    usbstack: "Host"
   </voice>
 </phrase>
 <phrase>
@@ -8271,19 +8265,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_MODE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "USB Stack Mode"
   </source>
   <dest>
     *: none
-    usbstack: "USB Stack Mode"
   </dest>
   <voice>
     *: none
-    usbstack: "USB Stack Mode"
   </voice>
 </phrase>
 <phrase>
@@ -8409,19 +8400,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device"
   </source>
   <dest>
     *: none
-    usbstack: "Device"
   </dest>
   <voice>
     *: none
-    usbstack: "Device"
   </voice>
 </phrase>
 <phrase>
@@ -9205,19 +9193,16 @@
 </phrase>
 <phrase>
   id: LANG_USBSTACK_DEVICE_DRIVER
-  desc: in usbstack settings
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    usbstack: "Device Driver"
   </source>
   <dest>
     *: none
-    usbstack: "Paraan Driver"
   </dest>
   <voice>
     *: none
-    usbstack: "Device Driver"
   </voice>
 </phrase>
 <phrase>
