Update german translation: go back to 'Safety' in the agc settings for now (revert half applied patch), one tweak and add the missing phrase (taken from FS#9999, add Kai Posadowsky to CREDITS for it).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20476 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/deutsch.lang
+++ b/apps/lang/deutsch.lang
@@ -6493,7 +6493,7 @@
   </source>
   <dest>
     *: none
-    agc: "Sicherheit (Übersteuerung)"
+    agc: "Safety (Übersteuerung)"
   </dest>
   <voice>
     *: none
@@ -6964,7 +6964,7 @@
 </phrase>
 <phrase>
   id: LANG_VERSION
-  desc: in the info menu
+  desc: in the Rockbox Info screen
   user: core
   <source>
     *: "Version"
@@ -12325,9 +12325,26 @@
     *: "Credits"
   </source>
   <dest>
-    *: "Dank"
+    *: "Mitwirkende"
   </dest>
   <voice>
-    *: "Dank an"
+    *: "Mitwirkende"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_ENABLE_SPEAKER
+  desc: in Settings -> Sound Settings
+  user: core
+  <source>
+    *: none
+    speaker: "Enable Speaker"
+  </source>
+  <dest>
+    *: none
+    speaker: "Lautsprecher einschalten"
+  </dest>
+  <voice>
+    *: none
+    speaker: "Lautsprecher einschalten"
   </voice>
 </phrase>
