Also add Kai Posadowsky to the list of contributors in the deutsch.lang file.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20478 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/deutsch.lang
+++ b/apps/lang/deutsch.lang
@@ -32,6 +32,7 @@
 # - Sascha Wolf
 # - Kaspar Rothenfußer
 # - Johannes Linke
+# - Kai Posadowsky
 <phrase>
   id: LANG_SET_BOOL_YES
   desc: bool true representation
